--- a/Kidney Cancer BDA.ipynb
+++ b/Kidney Cancer BDA.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Kidney Cancer Bayesian Data Analysis\n",
     "\n",
+    "Alex Chen\n",
+    "\n",
     "Data Source: https://github.com/robinryder/BDA-kidney\n",
     "\n",
     "Supplementation: https://data102.org/ds-102-book/content/chapters/02/02_hierarchical_models.html"
